--- a/src/scenes/Client/SingUp/SingUp.scss
+++ b/src/scenes/Client/SingUp/SingUp.scss
@@ -1,3 +1,58 @@
 .SingUp {
-    
+    .circle {
+        &-top {
+            position: absolute;
+            width: 500px;
+            height: 500px;
+            background: #cb1915;
+            border-radius: 50%;
+            top: -200px;
+            left: -200px;
+            z-index: 1;
+        }
+        &-dow {
+            width: 480px;
+            height: 480px;
+            background: #ed3b37;
+            border-radius: 50%
+        }
+        &-dow2 {
+            width: 280px;
+            height: 280px;
+            background: #ed3b37;
+            border-radius: 50%;
+            
+
+        }
+        &-bottom {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
+            width: 300px;
+            height: 300px;
+            background: #cb1915;
+            border-radius: 50%;
+            bottom: -100px;
+            right: -100px;
+            z-index: 1;
+        }
+    }
+
+
+    .container-register{
+        display: flex;
+        justify-content: center;
+        padding: 40px;
+    }
+
+    .container-form-register {
+        display: flex;
+        background-color: #ffffff;
+        width: 80%;
+        justify-content: center;
+        z-index: 2;
+        border-radius: 20px;
+        padding: 30px 0;
+    }
 }
