--- a/src/scenes/Client/SingUp/SingUp.scss
+++ b/src/scenes/Client/SingUp/SingUp.scss
@@ -42,17 +42,68 @@
 
     .container-register{
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
         padding: 40px;
     }
 
     .container-form-register {
         display: flex;
+        flex-direction: column;
         background-color: #ffffff;
         width: 80%;
         justify-content: center;
+        text-align: center;
         z-index: 2;
-        border-radius: 20px;
-        padding: 30px 0;
+        border-radius:0 0 20px 20px;
+        padding: 30px 20%;
+    }
+
+    .box-img-form{
+        background-image: linear-gradient(to right, rgba(12, 13, 14, 0.56), #792f2f52), url("../../../assets/image/register-bmw.jpg");
+        background-position: center;
+        background-size: cover;
+        width: 80%;
+        height: 280px;
+        text-align: center;
+        font-size: 50px;
+        z-index: 2;
+        border-radius: 20px 20px 0 0;
+    }
+
+    .box-img-form h1{
+        color: #ffffff;
+    }
+
+    .ant-btn-primary {
+        background: #cb1915;
+        border-color: #cb1915;
+        width: 100%;
+        border-radius: 50px;
+        font-size: 17px;
+        height: 42px;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+    .ant-checkbox-checked .ant-checkbox-inner {
+        background-color: #cb1915;
+        border-color: #cb1915;
+    }
+    .ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner, .ant-checkbox-input:focus + .ant-checkbox-inner {
+        border-color: #cb1915;
+    }
+
+    .ant-btn-primary:active {
+        color: #fff;
+        background: #cb1915;
+        border-color: #cb1915;
+    }
+
+    .ant-btn-primary:hover, .ant-btn-primary:focus {
+        color: #fff;
+        background: #cb1915;
+        border-color: #cb1915;
     }
 }
