--- a/src/scenes/Auth/Login/Login.scss
+++ b/src/scenes/Auth/Login/Login.scss
@@ -162,7 +162,7 @@
         }
         &--box2{
             // background-color: #b98686;
-            background-image: linear-gradient(to right, rgba(12, 13, 14, 0.56), #792f2f52), url("./../../assets/image/loginf.png");            
+            background-image: linear-gradient(to right, rgba(12, 13, 14, 0.56), #792f2f52), url("./../../../assets/image/loginf.png");            
             background-repeat: no-repeat;
             border-radius: 0 20px 20px 0;
             background-size: cover;
