--- a/src/sass/modules/_all.scss
+++ b/src/sass/modules/_all.scss
@@ -1,3 +1,3 @@
-@import "../../scenes/Auth/Login.scss";
+@import "../../scenes/Auth/Login/Login.scss";
 @import "../../scenes/Client/SingUp/SingUp.scss";
 @import "../../scenes/Client/Home/Home.scss";
