--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -1,2 +1,3 @@
-@import "../../components/Header/Header.scss"
+@import "../../components/Header/Header.scss";
+@import "../../components/Footer/Footer.scss";
 
