--- a/src/scenes/Client/Home/Home.scss
+++ b/src/scenes/Client/Home/Home.scss
@@ -63,6 +63,7 @@
             height: 30px;
             justify-content: center;
             align-items: center;
+            width: 115px;
 
             span{
                 color: #ffffff;
