--- a/src/scenes/Auth/Login/Login.scss
+++ b/src/scenes/Auth/Login/Login.scss
@@ -63,6 +63,8 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+        
         }
 
         &--box1 {
@@ -184,6 +186,20 @@
             }
         
         }
+    }
+    .home-back {
+        position: fixed;
+        z-index: 2;
+        top: 10px;
+        left: 10px;
+        background-color: #ffffff;
+        color: $primary;
+        border-radius: 50px;
+        width: 100px;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 16px;
+
     }
 }
 .cont-btn {
