--- a/src/scenes/Auth/Login/Login.scss
+++ b/src/scenes/Auth/Login/Login.scss
@@ -53,6 +53,7 @@
         justify-content: center;
         border-radius: 20px;
         z-index: 2;
+        max-width: 1200px;
         padding: 25px;
 
         .box {
