Style (Private DetailCar) Carousel.

--- a/src/sass/modules/_all.scss
+++ b/src/sass/modules/_all.scss
@@ -1,3 +1,4 @@
 @import "../../scenes/Auth/Login/Login.scss";
 @import "../../scenes/Client/SingUp/SingUp.scss";
 @import "../../scenes/Client/Home/Home.scss";
+@import "../../scenes/Client/DetailCar/DetailCar.scss";
