--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -5,3 +5,7 @@
 @import "./vendors/_all.scss";
 @import "./modules/all";
 @import "./utils/variables";
+
+@import "./template/footer.scss";
+@import "./template/header.scss";
+@import "./template/home.scss";
