--- a/src/sass/template/home.scss
+++ b/src/sass/template/home.scss
@@ -134,11 +134,17 @@
           font-weight: 400;
         }
         img {
-          width: 160px;
-          height: 160px;
+          width: 100px;
+          height: 100px;
           object-fit: cover;
           border-radius: 50%;
           box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        &-top {
+          img {
+            width: 160px;
+            height: 160px;
+          }
         }
       }
     }
