--- a/src/sass/template/home.scss
+++ b/src/sass/template/home.scss
@@ -101,6 +101,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-width: 1100px;
       .paragraph {
         margin-bottom: 100px;
       }
@@ -158,12 +159,22 @@
       width: 100%;
       flex-direction: column;
       align-items: center;
+      max-width: 1000px;
       h1 {
         margin-top: 30px;
       }
       .cont-photo {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
+        .darck {
+          padding: 10px;
+          border-radius: 5px;
+          background-color: #b0b0b0;
+          height: 75px;
+          display: flex;
+          align-items: center;
+        }
         img {
           height: 38px;
           width: auto;
@@ -187,6 +198,8 @@
       button {
         background: #4a90e2;
         border-color: #4a90e2;
+        border-width: 0;
+        border-radius: 3px;
         font-weight: 700;
         font-size: 0.85714286em;
         color: #ffffff;
