--- a/src/sass/template/home.scss
+++ b/src/sass/template/home.scss
@@ -9,6 +9,9 @@
     align-items: center;
     justify-content: flex-start;
     position: relative;
+    .logo {
+      display: none;
+    }
     .container {
       width: 100%;
       padding: 50px;
@@ -133,6 +136,8 @@
           font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
           color: #666666;
           font-weight: 400;
+          max-width: 158px;
+          text-align: center;
         }
         img {
           width: 100px;
@@ -159,19 +164,49 @@
     position: relative;
       z-index: 3;
     padding: 40px 0;
+    padding-bottom: 80px;
     .container {
-      display: flex;
+      display: block;
       width: 100%;
-      flex-direction: column;
-      align-items: center;
+      text-align: center;
       max-width: 1000px;
       h1 {
         margin-top: 30px;
+        max-width: 100%;
+        text-align: center;
+      }
+      .cont-car {
+        display: block;
+        a {
+          width: 100%;
+          display: flex !important;
+          justify-content: center;
+          align-items: center;
+          img {
+            height: 38px;
+            width: auto;
+            object-fit: cover;
+            margin: 20px 40px;
+          }
+        }
+      }
+      .slick-dots {
+        top: 50px;
+        margin-bottom: 50px;
+        margin-top: 50px;
+      }
+      .slick-dots li button:before {
+        font-size: 15px;
       }
       .cont-photo {
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
+        .one-item {
+          img {
+            margin: 20px 0 !important;
+          }
+        }
         .darck {
           padding: 10px;
           border-radius: 5px;
@@ -216,9 +251,21 @@
   }
   @media (max-width: 768px) { 
     &__banner {
-      height: auto;
+      height: 300px;
+      .logo {
+        display: flex;
+        width: 186px;
+        height: 47px;
+        object-fit: cover;
+        position: relative;
+        z-index: 100;
+      }
       .container {
-        padding: 50px 15px;
+        padding: 10px 15px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
       }
       h1 {
         font-size: 1.78571429em;
