--- a/src/sass/template/home.scss
+++ b/src/sass/template/home.scss
@@ -18,7 +18,7 @@
     }
     .video {
       position: absolute;
-      width: 100%;
+      width: 100% !important;
       left: 0%;
       z-index: 1;
       min-width: 1500px;
@@ -80,6 +80,11 @@
           justify-content: space-around;
           align-items: center;
           box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+          img {
+            width: 40px;
+            height: 40px;
+            object-fit: contain;
+          }
           p {
             margin-bottom: 0;
             font-size: 1em;
@@ -177,6 +182,15 @@
       }
       .cont-car {
         display: block;
+        .double {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          img {
+            margin: 0px 40px !important;
+          }
+        }
         a {
           width: 100%;
           display: flex !important;
@@ -189,6 +203,15 @@
             margin: 20px 40px;
           }
         }
+      }
+      .slick-next {
+        right: 0px;
+      }
+      .slick-prev {
+        left: 0px;
+    }
+      .slick-next:before , .slick-prev:before {
+        color: #878787;
       }
       .slick-dots {
         top: 50px;
