--- a/src/sass/template/home.scss
+++ b/src/sass/template/home.scss
@@ -259,8 +259,8 @@
       width: 100%;
       padding: 120px 65px;
       button {
-        background: #4a90e2;
-        border-color: #4a90e2;
+        background: #886CE3;
+        border-color: #886CE3;
         border-width: 0;
         border-radius: 3px;
         font-weight: 700;
