--- a/src/sass/template/home.scss
+++ b/src/sass/template/home.scss
@@ -80,6 +80,9 @@
           justify-content: space-around;
           align-items: center;
           box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+          .svg {
+            width: 50px;
+          }
           img {
             width: 40px;
             height: 40px;
@@ -297,6 +300,10 @@
           flex-direction: column;
           .card {
             width: 100%;
+            justify-content: flex-start;
+            .svg {
+              width: 100px;
+            }
           }
         }
       }
